force-app/main/default/objects/CC_Canal_Com__c/CC_Canal_Com__c.object-meta.xml
<CustomObject>
    <description>Canales de comunicación del cliente y del contacto.</description>
    <label>Canal de comunicación</label>
    <nameField>
        <displayFormat>COM-{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canales de comunicación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>