force-app/main/default/objects/CC_Canal_Com__c/fields/CC_Clase_Com__c.field-meta.xml
<CustomField>
    <fullName>CC_Clase_Com__c</fullName>
    <description>Clase comunicación</description>
    <inlineHelpText>Clase comunicación</inlineHelpText>
    <label>Clase comunicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Clase_Com</valueSetName>
    </valueSet>
</CustomField>