force-app/main/default/objects/CC_Canal_Com__c/fields/CC_ContactoId__c.field-meta.xml
<CustomField>
    <fullName>CC_ContactoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Persona de contacto relacionada</description>
    <inlineHelpText>Persona de contacto relacionada</inlineHelpText>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Canales_Comunicacion</relationshipName>
    <type>Lookup</type>
</CustomField>