force-app/main/default/objects/CC_Canal_Com__c/fields/CC_CuentaId__c.field-meta.xml
<CustomField>
    <fullName>CC_CuentaId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cuenta asociada al canal de comuniación</description>
    <inlineHelpText>Cuenta asociada al canal de comuniación</inlineHelpText>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Canales_Comunicaci_n</relationshipName>
    <type>Lookup</type>
</CustomField>