force-app/main/default/objects/CC_Canal_Com__c/fields/CC_Email__c.field-meta.xml
<CustomField>
    <fullName>CC_Email__c</fullName>
    <description>Dirección e-mail de contacto</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dirección e-mail de contacto</inlineHelpText>
    <label>E-mail</label>
    <type>Email</type>
</CustomField>