force-app/main/default/objects/CC_Canal_Com__c/fields/CC_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CC_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CC_External_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>