force-app/main/default/objects/CC_Canal_Com__c/fields/CC_NumPerso__c.field-meta.xml
<CustomField>
    <fullName>CC_NumPerso__c</fullName>
    <description>Numperso asociado al canal de comunicación</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Numperso asociado al canal de comunicación</inlineHelpText>
    <label>NumPerso</label>
    <length>15</length>
    <type>Text</type>
</CustomField>