force-app/main/default/objects/CC_Canal_Com__c/fields/CC_Telefono__c.field-meta.xml
<CustomField>
    <fullName>CC_Telefono__c</fullName>
    <description>Teléfono del cliente / contacto</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Teléfono del cliente / contacto</inlineHelpText>
    <label>Teléfono</label>
    <type>Phone</type>
</CustomField>