force-app/main/default/objects/CC_Canal_Com__c/fields/CC_TelefonoIDX__c.field-meta.xml
<CustomField>
    <fullName>CC_TelefonoIDX__c</fullName>
    <description>Campo teléfono indexado (para búsquedas)</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Campo teléfono indexado (para búsquedas)</inlineHelpText>
    <label>Teléfono (Indexado)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>