force-app/main/default/objects/CC_Canal_Com__c/fields/CC_Tipo_Com__c.field-meta.xml
<CustomField>
    <fullName>CC_Tipo_Com__c</fullName>
    <description>Tipo de teléfono</description>
    <inlineHelpText>Tipo de teléfono</inlineHelpText>
    <label>Tipo comunicación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Tipo_Telf</valueSetName>
    </valueSet>
</CustomField>