force-app/main/default/objects/CC_Canal_Com__c/fields/CIBE_ContactoPersonasJuridicas__c.field-meta.xml
<CustomField>
    <fullName>CIBE_ContactoPersonasJuridicas__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contacto para personas juridicas</label>
    <length>25</length>
    <type>Text</type>
</CustomField>