force-app/main/default/objects/CC_Canal_Com__c/fields/CIBE_FechaAlta__c.field-meta.xml
<CustomField>
    <fullName>CIBE_FechaAlta__c</fullName>
    <description>fecha de alta del canal de comunicación que recibimos desde bastanteos</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha Alta</label>
    <type>Date</type>
</CustomField>