force-app/main/default/objects/CC_Canal_Com__c/fields/CIBE_Prefijo__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Prefijo__c</fullName>
    <label>Prefijo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>