force-app/main/default/objects/CC_Canal_Com__c/fields/SEG_ParaCC__c.field-meta.xml
<CustomField>
    <fullName>SEG_ParaCC__c</fullName>
    <description>Campo que indica si la dirección asociada debe ir en Para, Copia o Copia Oculta.</description>
    <label>Para/CC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Para</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>