force-app/main/default/objects/CC_Canal_Com__c/recordTypes/CC_Email.recordType-meta.xml
<RecordType>
    <fullName>CC_Email</fullName>
    <active>true</active>
    <description>E-mail</description>
    <label>E-mail</label>
</RecordType>