force-app/main/default/objects/CC_Canal_Com__c/recordTypes/CC_Telefono.recordType-meta.xml
<RecordType>
    <fullName>CC_Telefono</fullName>
    <active>true</active>
    <description>Teléfono</description>
    <label>Teléfono</label>
</RecordType>