force-app/main/default/objects/CC_Canal_Com__c/validationRules/CC_Contacto_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Contacto_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_ContactoId__c ) != CC_ContactoId__c &amp;&amp; CC_ContactoId__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorDisplayField>CC_ContactoId__c</errorDisplayField>
    <errorMessage>El contacto seleccionado no debe estar marcado como inactivo.</errorMessage>
</ValidationRule>