force-app/main/default/objects/CC_Canal_Com__c/validationRules/CC_Cuenta_No_Inactivo.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Cuenta_No_Inactivo</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE( CC_CuentaId__c ) != CC_CuentaId__c &amp;&amp;
 CC_CuentaId__r.CC_Inactivo__c = TRUE</errorConditionFormula>
    <errorDisplayField>CC_CuentaId__c</errorDisplayField>
    <errorMessage>La cuenta seleccionada no debe estar marcada como inactiva.</errorMessage>
</ValidationRule>