force-app/main/default/objects/CC_Canal_Com__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CC_Clase_Com__c</columns>
    <columns>CC_CuentaId__c</columns>
    <columns>CC_ContactName__c</columns>
    <columns>CC_Telefono__c</columns>
    <columns>CC_TelefonoIDX__c</columns>
    <columns>CC_Telefono_Correo_Formula__c</columns>
    <columns>CC_Tipo_Com__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>